; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/extr_bpf-loader.c_prog_config__exec.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/extr_bpf-loader.c_prog_config__exec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_probe_event = type { i32, i32 }

@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.perf_probe_event*)* @prog_config__exec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @prog_config__exec(i8* %0, %struct.perf_probe_event* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.perf_probe_event*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.perf_probe_event* %1, %struct.perf_probe_event** %5, align 8
  %6 = load %struct.perf_probe_event*, %struct.perf_probe_event** %5, align 8
  %7 = getelementptr inbounds %struct.perf_probe_event, %struct.perf_probe_event* %6, i32 0, i32 0
  store i32 1, i32* %7, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @strdup(i8* %8)
  %10 = load %struct.perf_probe_event*, %struct.perf_probe_event** %5, align 8
  %11 = getelementptr inbounds %struct.perf_probe_event, %struct.perf_probe_event* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 4
  %12 = load %struct.perf_probe_event*, %struct.perf_probe_event** %5, align 8
  %13 = getelementptr inbounds %struct.perf_probe_event, %struct.perf_probe_event* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %2
  %17 = load i32, i32* @ENOMEM, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %3, align 4
  br label %20

19:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %20

20:                                               ; preds = %19, %16
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
